<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/margin_8dp"
    android:backgroundTint="@color/white">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white">

        <TextView
            android:id="@+id/border"
            android:layout_width="5dp"
            android:layout_height="62dp"
            android:layout_alignParentStart="true"
            android:layout_marginEnd="@dimen/margin_16dp"
            android:background="@color/accent" />

        <TextView
            android:id="@+id/customTxtCompany"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginTop="@dimen/margin_8dp"
            android:layout_marginBottom="@dimen/corner_10dp"
            android:layout_toEndOf="@+id/border"
            android:text="@string/company_name"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/customTxtDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/customTxtCompany"
            android:layout_toEndOf="@+id/border"
            android:text="@string/date_time"
            android:textColor="@color/transparent" />

        <TextView
            android:id="@+id/customTxtTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/customTxtCompany"
            android:layout_marginStart="@dimen/corner_10dp"
            android:layout_toEndOf="@+id/customTxtDate"
            android:text="@string/_10_am"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/imageLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@id/customTxtTime"
            android:layout_alignBottom="@id/customTxtTime"
            android:layout_marginStart="@dimen/margin_8dp"
            android:layout_toEndOf="@id/customTxtTime"
            android:src="@drawable/ic_location" />

        <TextView
            android:id="@+id/txtTimeRemain"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_margin="@dimen/margin_8dp"
            android:background="@color/whiteBG"
            android:padding="13dp"
            android:text="@string/_40_min"
            android:textColor="@color/transparent" />


    </RelativeLayout>

</com.google.android.material.card.MaterialCardView>