<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/whiteBG"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingHorizontal="@dimen/margin_30dp"
    tools:context=".Fragments.UserProfileFragment">

    <!--    <com.google.android.material.switchmaterial.SwitchMaterial-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_marginVertical="@dimen/margin_30dp"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:text="@string/sync_data_with_server" />-->


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="16dp"

            android:textColorHint="@color/teal_700"
            android:theme="@style/Widget.MaterialComponents.TextInputLayout.FilledBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editFirstName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/shape_black_stroke"
                android:enabled="false"
                android:hint="@string/first_name"
                android:textColor="@color/black" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginBottom="16dp"
            android:textColorHint="@color/teal_700">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editLastName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/shape_black_stroke"

                android:enabled="false"
                android:hint="@string/last_name"
                android:textColor="@color/black"
                app:counterMaxLength="20" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"

            android:textColorHint="@color/teal_700">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editPhoneNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/shape_black_stroke"
                android:enabled="false"

                android:hint="@string/phone_number"
                android:inputType="number"
                android:textColor="@color/black" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"

            android:textColorHint="@color/teal_700">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/shape_black_stroke"
                android:enabled="false"
                android:hint="@string/address"
                android:textColor="@color/black" />
        </com.google.android.material.textfield.TextInputLayout>


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnSignOut"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginEnd="@dimen/margin_8dp"
            android:background="@drawable/shape_btn_red"
            android:drawableEnd="@drawable/ic_logout"
            android:drawablePadding="@dimen/margin_8dp"
            android:paddingHorizontal="@dimen/margin_12dp"
            android:text="@string/log_out"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:visibility="visible" />


    </LinearLayout>

</LinearLayout>